# SB_django_helpdesk

./: README.md  pyproject.toml
sb-django-helpdesk/: .gitlab-ci.yml  README.md  docker-compose.yml  pyproject.toml
sb-django-helpdesk/config/: .env.template
sb-django-helpdesk/docker/: docker-compose.prod.yml
sb-django-helpdesk/server/: urls.py
sb-django-helpdesk/server/settings/components/: common.py
sb-django-helpdesk/server/templates/txt/: humans.txt
