[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"


[tool.poetry]
name = "sb-django-helpdesk"
description = "SB django-helpdesk"
version = "0.1.0"
readme = "README.md"
authors = ["myapp.com"]


[tool.poetry.dependencies]
python = "^3.8.9"

django = "^2.2.24"
django-split-settings = "^1.1"
django-axes = "^5.22"
django-csp = "^3.7"
django-health-check = "^3.16"
django-http-referrer-policy = "^1.1"
django-permissions-policy = "^4.2"
django-stubs-ext = "^0.2"

psycopg2-binary = "<2.9"
gunicorn = "^20.0"
python-decouple = "^3.4"
bcrypt = "^3.2"
structlog = "^21.1"

django-bootstrap4-form = "^4.0.1"
celery = "^5.1.2"
django-celery-beat = "^2.2.1"
email-reply-parser = "^0.5.12"
akismet = "^1.1"
Markdown = "^3.3.4"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.3"
simplejson = "^3.17.5"
pytz = "^2021.1"
six = "^1.16.0"
pinax-teams = "^2.0.0"
djangorestframework = "^3.12.4"
django-model-utils = "^4.1.1"
django-helpdesk = "^0.2.23"


[tool.poetry.dev-dependencies]
django-debug-toolbar = "^3.2"
django-querycount = "^0.7"
django-migration-linter = "^3.0"
django-extra-checks = "^0.11"
django-coverage-plugin = "^2.0"
nplusone = "^1.0"

wemake-python-styleguide = "^0.15"
flake8-pytest-style = "^1.5"
flake8-django = "^1.1"
flake8-logging-format = "^0.6"
nitpick = "^0.27"

pytest = "^6.2"
pytest-django = "^4.4"
pytest-cov = "^2.12"
pytest-randomly = "^3.10"
pytest-deadfixtures = "^2.2"
pytest-testmon = "^1.1"
pytest-timeout = "^1.4"
django-test-migrations = "^1.1"
hypothesis = "^6.17"

mypy = "^0.910"
django-stubs = "^1.8"

sphinx = "^4.1"
sphinx-autodoc-typehints = "^1.12"
tomlkit = "^0.7"
doc8 = "^0.9"

yamllint = "^1.26"
safety = "^1.10"
dotenv-linter = "^0.2"
polint = "^0.4"
dennis = "^0.9"
dump-env = "^1.3"
ipython = "^7.27"
